test/correct/ImportDict1.hs
module ImportDict1 where

import ImportDict2(A(MkA))

main = show (MkA 3)


