test/typeerrors/Strategies/A.hs
module A where

import B

main = 'a' +++ 3
